2010-07-08  Jason Merrill  <jason@redhat.com>

	PR c++/44703
	* call.c (is_std_init_list): Look through typedefs.

2010-07-02  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/44039
	* pt.c (tsubst_baselink): Return error_mark_node if lookup_fnfields
	returns NULL_TREE.

2010-06-30  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/44628
	* typeck.c (cp_build_unary_op): Early return error_mark_node when
	arg is NULL_TREE too.
	* call.c (convert_class_to_reference): Return error_mark_node when
	expr is NULL_TREE.

2010-06-29  Jason Merrill  <jason@redhat.com>

	PR c++/44587
	* pt.c (has_value_dependent_address): New.
	(value_dependent_expression_p): Check it.
	(convert_nontype_argument): Likewise.  Call decay_conversion before
	folding if we want a pointer.
	* semantics.c (finish_id_expression): Don't add SCOPE_REF if the
	scope is the current instantiation.

2010-06-22  Jakub Jelinek  <jakub@redhat.com>

	PR c++/44627
	* error.c (dump_expr): Don't look at CALL_EXPR_ARG (t, 0) if
	the CALL_EXPR has no arguments.

2010-06-07  Jason Merrill  <jason@redhat.com>

	PR c++/44366
	* error.c (dump_simple_decl): Don't print the scope of a
	PARM_DECL.

2010-06-07  Jason Merrill  <jason@redhat.com>

	PR c++/44401
	* parser.c (cp_parser_lookup_name): Fix naming the constructor.

2010-06-01  Jason Merrill  <jason@redhat.com>

	PR c++/44358
	* call.c (build_list_conv): Set list-initialization flags properly.

2010-05-27  Jason Merrill  <jason@redhat.com>

	PR c++/43555
	* decl.c (grokdeclarator) [cdk_pointer et al]: Force evaluation of
	anonymous VLA size.

2010-05-26  Jason Merrill  <jason@redhat.com>

	PR c++/43382
	* pt.c (tsubst_pack_expansion): Don't get confused by recursive
	unification.

2010-05-24  Jason Merrill  <jason@redhat.com>

	PR c++/41510
	* decl.c (check_initializer): Don't wrap an init-list in a
	TREE_LIST.
	* init.c (build_aggr_init): Don't assume copy-initialization if
	init has CONSTRUCTOR_IS_DIRECT_INIT.
	* call.c (build_new_method_call): Sanity check.
