@@ -1,3 +1,8 @@
+2010-07-19  Jason Merrill  <jason@redhat.com>
+
+	PR c++/44996
+	* g++.dg/cpp0x/decltype23a.C: New.
+
 2010-07-18  Daniel Franke  <franke.daniel@gmail.com>
 	    Paul Thomas  <pault@gcc.gnu.org>
 
